# new_ws4

./: .gitignore
src/aruco/aruco/: aruco_node.py
src/camera/: setup.py
src/camera/camera/: camera_node.py  capture_node.py
src/config/: vehicle_config.yaml
src/control/control/: lane_follow_node.py
src/control/launch/: racer_bringup.launch.py
src/interface/: CMakeLists.txt  package.xml
src/interface/msg/: LaneDetection.msg  LaneInfo.msg
src/interpret/: package.xml  setup.cfg  setup.py
src/interpret/interpret/: interpret_node.py
src/lane_detection/: package.xml  setup.py
src/lane_detection/lane_detection/: lane_node.py
src/monitor/monitor/static/css/: style.css
src/monitor/monitor/templates/: index.html
src/opencv/opencv/: opencv_node.py
